# utlx

./: CLAUDE.md  CMakeLists.txt  README.md  TLXConversionPatterns.cpp  TLXLocalAllocPlugin.cpp
.claude/skills/compare-ir-dumps/: mlir-llvm-dump-for-perf-analysis-skill.md
.claude/skills/port-tlx-to-plugin/: SKILL.md  TLX-AMD-META-PORTING.md
python/benchmarks/: amd-gemm-pipelined.py  run_amd_gemm_pipelined.sh
python/tlx/: __init__.py
python/tlx_plugin/: __init__.py  barrier.py  custom_stages.py  mem_ops.py  types.py  utility.py
test/: test_alloc_barriers.py  test_local_alloc.py
